--- a/templates/base.html
+++ b/templates/base.html
@@ -4,15 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>首頁</title>
+    <title>Document</title>
 </head>
 
 <body>
 
-
-
-    <a href="/comment">新增用戶評論</a>
-    <a href="/parkinginfo">停車站資訊</a>
 </body>
 
 </html>
